#172: OutputModal: Fix long shell commands being clipped off.

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@
     border-top: none;
 }
 
+.SC-wrappable {
+    white-space: normal;
+}
+
 /*
  * SHELL COMMAND SETTING CONTAINERS
  */
